# awspy

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
awspy/: appsync.py  appsync_test.py  cloudmap.py  cloudmap_test.py  config.py  config_test.py  dynamodb.py  dynamodb_test.py  info.py  info_test.py  iot.py  iot_test.py  ssm.py  ssm_test.py
awspy/cognito/: auth.py  auth_test.py
src/: dynamodb.py
