[tool.poetry]
name = "awspy"
version = "5.11.29"
description = ""
authors = ["yhattm <yhattm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3"
boto3 = "^1.26.17"
configparser = "^5.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
