[tool.poetry]
name = "awspy"
version = "5.12.27"
description = ""
authors = ["yhattm <yhattm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.26.17"
configparser = "^5.3.0"
python-jose = "^3.3.0"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
